# prowl

./: .goreleaser.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  snapshot.yml
src/: auth.rs  cache.rs  changes.rs  cli.rs  commits.rs  gh.rs  github.rs  lib.rs  main.rs  merged.rs  model.rs  nav.rs  open.rs  prs.rs  queue.rs  render.rs  reviews.rs  snapshot.rs  status.rs  term.rs  timefmt.rs
tests/: parsing.rs
tests/fixtures/: merged.json  mine.json  mine_empty.json  mine_null_checkruns.json  mine_null_checksuites.json  queue_empty.json  queue_null.json  queue_populated.json  reviewed_merged.json  reviews.json
