[package]
name = "prowl"
version = "0.1.0"
edition = "2024"
description = "A tiny terminal radar for your GitHub pull requests."
license = "MIT"

[[bin]]
name = "prowl"
path = "src/main.rs"

[features]
# The hidden `--demo` flag (synthetic data for screenshots). Off by default so
# release builds don't ship it; enable with `cargo run --features demo`.
demo = []

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
keyring = { version = "^3", default-features = false, features = ["apple-native", "windows-native"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uncurses = { git = "https://github.com/aymanbagabas/uncurses", rev = "1f8139b1aa10c24fd7d94a2cc7047fe913ede4a7" }
ureq = { version = "3.3.0", default-features = false, features = ["json", "rustls"] }

# On Linux the default keyring backend is the in-process `mock`, which doesn't
# persist across runs. Use the kernel keyutils backend (`linux-native`): it
# persists the token in the user's session keyring with no system C library
# (the `*-sync-persistent` combo feature would pull in dbus/libdbus-sys, which
# needs libdbus-1-dev on the host). macOS/Windows feature sets are unchanged.
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "^3", default-features = false, features = ["linux-native"] }
